--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,7 @@
   --header-text-rgb: 0, 0, 0;
   --text-rgb: 50, 50, 50;
   --foreground-rgb: 255, 255, 255;
+  --secondary-background-color-rgb: 230, 230, 230;
   --background-rgb: 255, 255, 255;
 }
 
@@ -14,6 +15,7 @@
     --header-text-rgb: 255, 255, 255;
     --text-rgb: 200, 200, 200;
     --foreground-rgb: 20, 20, 20;
+    --secondary-background-color-rgb: 50, 50, 50;
     --background-rgb: 0, 0, 0;
   }
 }
@@ -21,4 +23,7 @@
 body {
   color: rgb(var(--text-rgb));
   background-color: rgb(var(--background-rgb));
+}
+nav {
+  background-color: rgb(var(--secondary-background-color-rgb));
 }
